elegantly resolves vertical scrollbar jump issue

--- a/public/css/main.sass
+++ b/public/css/main.sass
@@ -10,6 +10,9 @@
   font-weight: 300
   font-style: normal
 
+html
+  margin-left: calc(100vw - 100%)
+
 h1, h2, h3, h4, h5
   color: #272623
   font-family: 'Martel-Regular', serif
